--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "sass": "^1.89.2",
     "web-vitals": "^2.1.4"
