--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.2.6",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-infinite-scroll-component": "^6.1.0",
