--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tippyjs/react": "^4.2.6",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
